# linky

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
example_site/path/to/: absolute.md  example.md  follow.md  fragment.md  only-on-example-branch.md  other.md  transform.md
examples/: example.md  examples.md  exhibition.md  github.md  single.md
examples/markdown_site/: README.md
src/: .linky.rs.swp  error.rs  errors.rs  lib.rs  link.rs  linkck.rs  linky.rs  main.rs
