[package]
name = "linky"
version = "0.1.4"
authors = ["Mattias Päivärinta <mattias@paivarinta.se>"]
description = "Extract links from Markdown files and check links for brokenness"
repository = "https://github.com/mattias-p/linky"
readme = "README.md"
keywords = ["commonmark","extract","validate","links","documentation"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
include = [
    "Cargo.toml",
    "**/*.rs",
]
edition = "2018"

[dependencies]
bytecount = "0.3.1"
encoding = "0.2"
htmlstream = "0.1.3"
lazy_static = "0.2.9"
log = "0.4"
pretty_env_logger = "0.2"
pulldown-cmark = { version = "0.0.11", default-features = false }
rayon = "1.0"
regex = "0.2.2"
reqwest = "0.8.6"
shell-escape = "0.1.3"
structopt = "0.2"
url = "1.5.1"
xhtmlchardet = "2.0.0"
